# procedural-texture-generator

./: .gitignore  CMakeLists.txt  glade.glade  glade.glade~  readme.md  ui.glade
src/: globals.h  main.c
src/handlers/: ui.c
src/headers/: bluredNoise.h  bmp.h  cloud.h  clouds.h  handler.h  hsl.h  marble.h  noise.h  randomNoisePattern.h  smoothNoise.h  texture.h  textureLight.h  textureToBlue.h  turbulence.h  ui.h  wood.h
src/modules/: bluredNoise.c  bluredNoise.h  bmp.c  bmp.h  noise.c  noise.h  randomNoisePattern.c  smoothNoise.c  smoothNoise.h  texture.c  texture.h  turbulence.c  turbulence.h
src/textures/: cloud.c  clouds.c  marble.c  wood.c
src/types/: bmp.h  bmpHeader.h  bmpHeaderType.h  bmpType.h  hslType.h  memDescriptor.h  pixelType.h  rgbType.h
src/utils/: hsl.c  textureLight.c  textureToBlue.c
